# 6-sem-practicum

./: .gitignore  Dockerfile.inference  Dockerfile.runner  README.md  docker-compose.yml  pyproject.toml  requirements.txt  to-add-if-want-inference.yml  структура.txt
src/common/: config.py
src/common/db/: predictions.py  scenarios.py
src/common/kafka/: consumer.py  producer.py
src/inference/: inference.py  main.py  mock_inference.py  real_inference.py
src/orchestrator/: commands.py  events.py  heartbeats.py  main.py  monitor.py  runner_dispatch.py
src/runner/: main.py
src/videoanalysis/: api.py  main.py  schemas.py
